<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_image2"
    tools:context=".MainActivity">

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/welcome_to_fundmantra"
         android:id="@+id/welcome_view"
         android:textSize="36sp"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/blue"/>


     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:background="@drawable/custom_edittext"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_gravity="center_horizontal"
              android:padding="24dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/login"
                   android:id="@+id/LoginText"
                   android:textSize="36sp"
                   android:textAlignment="center"
                   android:textStyle="bold"
                   android:textColor="@color/blue"/>

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/username"
                   android:background="@drawable/custom_edittext"
                   android:drawableLeft="@drawable/baseline_person_24"
                   android:drawablePadding="8dp"
                   android:hint="@string/username"
                   android:padding="8dp"
                   android:textColor="@color/black"
                   android:textColorHighlight="@color/cardview_dark_background"
                   android:layout_marginTop="40dp"
                   tools:ignore="Autofill,RtlHardcoded,TextFields" />

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/password"
                   android:background="@drawable/custom_edittext"
                   android:drawableLeft="@drawable/baseline_password_24"
                   android:drawablePadding="8dp"
                   android:hint="@string/password"
                   android:inputType="textPassword"
                   android:padding="8dp"
                   android:textColor="@color/black"
                   android:textColorHighlight="@color/cardview_dark_background"
                   android:layout_marginTop="40dp"
                   tools:ignore="Autofill,RtlHardcoded" />

               <Button
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/loginButton"
                   android:text="@string/login1"
                   android:textSize="18sp"
                   android:layout_marginTop="30dp"
                   android:backgroundTint="@color/blue"
                   app:cornerRadius="20dp"/>

          </LinearLayout>

     </androidx.cardview.widget.CardView>

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="@string/not_yet_registered_signup_now"
         android:textSize="14sp"
         android:textAlignment="center"
         android:id="@+id/signupText"
         android:clickable="true"
        android:onClick="openSignUpActivity"
         android:textColor="@color/blue"
         android:layout_marginBottom="20dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>
