<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_image2"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#CCCFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/sign_up"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/baseline_name__24"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            tools:ignore="Autofill,RtlHardcoded,TextFields" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="40dp"
            tools:ignore="Autofill,RtlHardcoded,TextFields" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_no"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/baseline_phone_no_24"
            android:drawablePadding="8dp"
            android:hint="@string/ph_no"
            android:inputType="phone"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="40dp"
            tools:ignore="Autofill,RtlHardcoded" />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_signup"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:hint="@string/password_signup"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                tools:ignore="Autofill,RtlHardcoded" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_signup_confirm"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:hint="@string/password_signup_confirm"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                tools:ignore="Autofill,RtlHardcoded" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signupButton"
                android:text="@string/signuptext"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue"
                app:cornerRadius="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>
